# csad25407ZatvarnytskyiVitalii7

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  ci.bat  ci.sh  copilot.txt  math_operations.cpp  math_operations.h  uart_rx.vhd  uart_tb.vhd  uart_tx.vhd  wave.vcd  work-obj08.cf
.github/workflows/: ci.yml
tests/: unit_tests.cpp
